<resources>
    <string name="app_name">Material-X</string>

    <!-- Dummy Sample Text-->
    <string name="dummy_text_1">A new dawn</string>
    <string name="dummy_text_2">Random text about xyz doing xyz.Check out more details as xy dives deeper.</string>
    <string name="dummy_text_3">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.
    </string>

    <!--Typography-->
    <string name="label_typography">Typography</string>
    <string name="typography_icon_content_description">Typography Icon</string>
    <string name="headline_1_label">Headline 1</string>
    <string name="headline_2_label">Headline 2</string>
    <string name="headline_3_label">Headline 3</string>
    <string name="headline_4_label">Headline 4</string>
    <string name="headline_5_label">Headline 5</string>
    <string name="headline_6_label">Headline 6</string>
    <string name="subtitle_1_label">Subtitle 1</string>
    <string name="subtitle_2_label">Subtitle 2</string>
    <string name="body_1_label">Body 1</string>
    <string name="body_2_label">Body 2</string>
    <string name="caption_label">Caption</string>
    <string name="overline_label">Overline</string>
    <string name="button_label">Button</string>
    <string name="letter_spacing_example_text">Letter Spacing Example</string>
    <string name="fun_with_font_attributes_text">Fun with font attributes</string>
    <string name="demo_label">Demo</string>
    <string name="reference_label">Reference</string>

    <!--Buttons-->
    <string name="bookmark_label">Bookmark</string>
    <string name="explore_label">Explore</string>
    <string name="explore_articles_label">Explore Articles</string>
    <string name="read_more_label">Read More</string>
    <string name="category_label">Category</string>
    <string name="select_preferred_mode_text">Select Preferred Mode</string>
    <string name="audio_label">Audio</string>
    <string name="video_label">Video</string>
    <string name="text_label">Text</string>
    <string name="label_buttons">Buttons</string>
    <string name="favs_button">Favs Button</string>
    <string name="material_buttons_label">Material Buttons</string>
    <string name="floating_action_buttons_label">Floating Action Buttons</string>

    <!-- Color Palette-->
    <string name="vibrant_color_label">Vibrant Color</string>
    <string name="light_vibrant_color_label">Light Vibrant Color</string>
    <string name="dark_vibrant_color_label">Dark Vibrant Color</string>
    <string name="dark_muted_color_label">Dark Muted Color</string>
    <string name="light_muted_color_label">Light Muted Color</string>
    <string name="muted_color_label">Muted Color</string>
    <string name="label_color_palette">Color Palette</string>

    <!--Animations-->
    <string name="start_label">Start</string>
    <string name="label_animations">Animations</string>
    <string name="object_animator_label">Object Animator</string>
    <string name="value_animator_label">Value Animator</string>
    <string name="animator_set_label">Animator Set</string>
    <string name="layout_transition_label">Layout Transition</string>
    <string name="lottie_animations_label">Lottie Animations</string>

    <!--Input-->
    <string name="dummy_hint">Enter Something</string>
    <string name="label_input">Input</string>
    <string name="error_placeholder">Oops!! Check Input</string>
    <string name="favorites_label">Favorites</string>

    <!--Bottom Navigation-->
    <string name="label_bottom_navigation">Bottom Navigation</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_notifications">Notifications</string>

    <!--Grids-->
    <string name="label_grids">Grids</string>
    <string name="current_grid_content_description">Selected Grid View Option</string>
    <string name="title_grid_items">Grid Items</string>

    <!--Motion-->
    <string name="label_motion">Motion</string>

    <!--Dialogs-->
    <string name="label_dialog">Dialogs</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="simple_dialog">Simple Dialog</string>
    <string name="confirmation_dialog">Confirmation Dialog</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="multiple_choice_confirmation_dialog">Multiple Choice Confirmation Dialog</string>

</resources>