<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_24"
        android:orderInCategory="1"
        android:title="@string/menu_title_home" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24"
        android:orderInCategory="3"
        android:title="@string/menu_title_search" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_24"
        android:orderInCategory="3"
        android:title="@string/menu_title_settings" />

    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_notifications_24"
        android:orderInCategory="4"
        android:title="@string/menu_title_notifications" />

</menu>