<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".typography.TypographyFragment">

        <TextView
            android:id="@+id/headline_one_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/headline_1_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1" />

        <TextView
            android:id="@+id/headline_two_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/headline_2_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2" />

        <TextView
            android:id="@+id/headline_three_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/headline_3_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3" />

        <TextView
            android:id="@+id/headline_four_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/headline_4_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

        <TextView
            android:id="@+id/headline_five_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/headline_5_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <TextView
            android:id="@+id/headline_six_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/headline_6_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <TextView
            android:id="@+id/subtitile_one_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/subtitle_1_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <TextView
            android:id="@+id/subtitle_two_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/subtitle_2_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

        <TextView
            android:id="@+id/body_one_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/body_1_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <TextView
            android:id="@+id/body_two_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/body_2_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

        <TextView
            android:id="@+id/caption_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/caption_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/button_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/button_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

        <TextView
            android:id="@+id/overline_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/overline_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

        <TextView
            android:id="@+id/letterspacing_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/letter_spacing_example_text"
            android:textAppearance="@style/TextAppearance.MaterialX.Body1.Spaced" />

        <!--  To use downloadable fonts on Android N and below use AppCompatEditTextView-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fonts_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/fun_with_font_attributes_text"
            android:textAppearance="@style/TextAppearance.MaterialX.Body1.Styled" />

    </LinearLayout>
</ScrollView>