<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buttons.MaterialButtonsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/article_container_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/city" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_standard"
                android:text="@string/dummy_text_1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_standard"
                android:text="@string/dummy_text_2"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/color_grey_800_light" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/margin_standard"
                android:orientation="horizontal">


                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialX.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="@dimen/margin_small"
                    android:text="@string/bookmark_label"
                    app:icon="@drawable/ic_bookmark_24" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialX.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="@dimen/margin_small"
                    android:text="@string/read_more_label" />

            </LinearLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:button="@drawable/ic_favourite_state"
            android:buttonTint="@color/color_white" />

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/explore_button"
        style="@style/Widget.MaterialX.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_big"
        android:text="@string/explore_articles_label"
        app:icon="@drawable/ic_explore_articles_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_container_card" />

    <TextView
        android:id="@+id/category_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginVertical="@dimen/margin_big"
        android:text="@string/category_label"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/explore_button" />

    <TextView
        android:id="@+id/category_caption_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:text="@string/select_preferred_mode_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_text_view" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/material_toggle_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:checkedButton="@+id/audio_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_caption_text_view">

        <Button
            android:id="@+id/audio_button"
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialX.Button.OutlinedButton"
            android:layout_height="wrap_content"
            android:text="@string/audio_label" />

        <Button
            android:id="@+id/video_button"
            style="@style/Widget.MaterialX.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_label" />

        <Button
            android:id="@+id/text_button"
            style="@style/Widget.MaterialX.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_label" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>