<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/color_extraction_target_image_view"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_standard"
        tools:ignore="ContentDescription"
        tools:src="@tools:sample/backgrounds/scenic" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/vibrant_image_view"
            android:layout_width="@dimen/palette_image_view_width"
            android:layout_height="@dimen/palette_image_view_height"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/margin_standard"
            android:contentDescription="@string/vibrant_color_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/color_yellow_A700" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:text="@string/vibrant_color_label"
            app:layout_constraintBottom_toBottomOf="@+id/vibrant_image_view"
            app:layout_constraintStart_toEndOf="@+id/vibrant_image_view"
            app:layout_constraintTop_toTopOf="@id/vibrant_image_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/light_vibrant_image_view"
            android:layout_width="@dimen/palette_image_view_width"
            android:layout_height="@dimen/palette_image_view_height"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/margin_standard"
            android:contentDescription="@string/light_vibrant_color_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/color_yellow_A700_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:text="@string/light_vibrant_color_label"
            app:layout_constraintBottom_toBottomOf="@+id/light_vibrant_image_view"
            app:layout_constraintStart_toEndOf="@+id/light_vibrant_image_view"
            app:layout_constraintTop_toTopOf="@id/light_vibrant_image_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dark_vibrant_image_view"
            android:layout_width="@dimen/palette_image_view_width"
            android:layout_height="@dimen/palette_image_view_height"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/margin_standard"
            android:contentDescription="@string/dark_vibrant_color_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/color_yellow_A700_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:text="@string/dark_vibrant_color_label"
            app:layout_constraintBottom_toBottomOf="@+id/dark_vibrant_image_view"
            app:layout_constraintStart_toEndOf="@+id/dark_vibrant_image_view"
            app:layout_constraintTop_toTopOf="@id/dark_vibrant_image_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/muted_image_view"
            android:layout_width="@dimen/palette_image_view_width"
            android:layout_height="@dimen/palette_image_view_height"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/margin_standard"
            android:contentDescription="@string/muted_color_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/color_pink_900" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:text="@string/muted_color_label"
            app:layout_constraintBottom_toBottomOf="@+id/muted_image_view"
            app:layout_constraintStart_toEndOf="@+id/muted_image_view"
            app:layout_constraintTop_toTopOf="@id/muted_image_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/light_muted_image_view"
            android:layout_width="@dimen/palette_image_view_width"
            android:layout_height="@dimen/palette_image_view_height"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/margin_standard"
            android:contentDescription="@string/light_muted_color_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/color_pink_900_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:text="@string/light_muted_color_label"
            app:layout_constraintBottom_toBottomOf="@+id/light_muted_image_view"
            app:layout_constraintStart_toEndOf="@+id/light_muted_image_view"
            app:layout_constraintTop_toTopOf="@id/light_muted_image_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dark_muted_image_view"
            android:layout_width="@dimen/palette_image_view_width"
            android:layout_height="@dimen/palette_image_view_height"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/margin_standard"
            android:contentDescription="@string/dark_muted_color_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/color_pink_900_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:text="@string/dark_muted_color_label"
            app:layout_constraintBottom_toBottomOf="@+id/dark_muted_image_view"
            app:layout_constraintStart_toEndOf="@+id/dark_muted_image_view"
            app:layout_constraintTop_toTopOf="@id/dark_muted_image_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

